overlays/mediamtx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx
  namespace: 5stack
  labels:
    app: mediamtx
spec:
  selector:
    app: mediamtx
  ports:
    - { name: hls,  port: 8888, targetPort: 8888, protocol: TCP }
    - { name: whip, port: 8889, targetPort: 8889, protocol: TCP }
    - { name: srt,  port: 8890, targetPort: 8890, protocol: UDP }
    - { name: api,  port: 9997, targetPort: 9997, protocol: TCP }
